# Hunyuan3D-Part

./: .gitignore  pipeline.py  pyproject.toml  ruff.toml
P3-SAM/: p3_sam.py  pyproject.toml
P3-SAM/utils/chamfer3D/: dist_chamfer_3D.py
XPart/: pyproject.toml
XPart/partgen/bbox_estimator/: auto_mask_api.py
XPart/partgen/config/: infer.yaml
