[project]
name = "hunyuan3d-part"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "addict>=2.4.0",
    "diffusers>=0.35.1",
    "einops>=0.8.1",
    "fpsample>=0.2.0",
    "lightning>=2.5.5",
    "numba>=0.62.1",
    "numpy>=2.3.3",
    "omegaconf>=2.3.0",
    "p3-sam",
    "pymeshlab==2023.12.post3",
    "scikit-image>=0.25.2",
    "scikit-learn>=1.7.2",
    "sonata>=1.0",
    "spconv-cu126>=2.3.8",
    "timm>=1.0.20",
    "torch==2.8.0",
    "torchvision>=0.23.0",
    "trimesh>=4.8.3",
    "viser>=1.0.11",
    "xpart",
]


[project.optional-dependencies]
post = ["flash-attn>=2.8.3", "torch-scatter==2.1.2+pt28cu128", "torch-cluster==1.6.3+pt28cu128", "chamfer-3d"]

[tool.uv]
environments = ["sys_platform == 'linux'"]
no-build-isolation-package = ["flash-attn", "torch-scatter", "torch-cluster", "chamfer-3d"]
find-links = ["https://data.pyg.org/whl/torch-2.8.0+cu128.html"]

[[tool.uv.dependency-metadata]]
name = "torch-scatter"
requires-dist = ["torch", "setuptools"]

[[tool.uv.dependency-metadata]]
name = "torch-cluster"
requires-dist = ["torch", "setuptools"]

[tool.uv.sources]
chamfer-3d = { path = "P3-SAM/utils/chamfer3D" }
sonata = { git = "https://github.com/facebookresearch/sonata.git" }
flash-attn = { url = "https://github.com/Dao-AILab/flash-attention/releases/download/v2.8.3/flash_attn-2.8.3+cu12torch2.8cxx11abiTRUE-cp313-cp313-linux_x86_64.whl" }
p3-sam = { workspace = true }
partgen = { workspace = true }

[tool.uv.workspace]
members = [
    "P3-SAM",
    "XPart",
]

[dependency-groups]
dev = [
    "ruff>=0.13.3",
]
